--- a/MultiWorld/plugin.yml
+++ b/MultiWorld/plugin.yml
@@ -1,7 +1,7 @@
 name: MultiWorld
 author: CzechPMDevs
 authors: [GamakCZ]
-api: [3.0.0-ALPHA5, 3.0.0-ALPHA6, 3.0.0-ALPHA7, 4.0.0]
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9]
 version: 1.3.0 [BETA 3] [Genisys]
 main: MultiWorld\MultiWorld
 description: Ported MultiWorld to pocketmine.
@@ -17,14 +17,14 @@ permissions:
     default: op
     description: Permission for all MultiWorld commands
     childern:
-      mw.cmd.help:
-        description: Permission for /mw help
-        default: op
       mw.cmd.create:
         description: Permission for /mw create
         default: op
-      mw.cmd.teleport:
-        description: Permission for /mw teleport
+      mw.cmd.delete:
+        description: Permission for /mw delete
+        default: op
+      mw.cmd.help:
+        description: Permission for /mw help
         default: op
       mw.cmd.import:
         description: Permission for /mw import
@@ -34,6 +34,18 @@ permissions:
         default: op
       mw.cmd.load:
         description: Permission for /mw load
+        default: op
+      mw.cmd.setlobby:
+        description: Prmission for /mw setlobby
+        default: op
+      mw.cmd.setdefault:
+        description: Permission for /mw setdefault
+        default: op
+      mw.cmd.sethub:
+        description: Permission for /mw sethub
+        default: op
+      mw.cmd.teleport:
+        description: Permission for /mw teleport
         default: op
       mw.cmd.unload:
         description: Permission for /mw unload
