--- a/MultiWorld/plugin.yml
+++ b/MultiWorld/plugin.yml
@@ -1,7 +1,7 @@
 name: MultiWorld
 author: CzechPMDevs
 authors: [GamakCZ]
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9]
+api: [3.0.0-ALPHA4, 3.0.0-ALPHA5, 3.0.0-ALHPA6]
 version: 1.3.0 [BETA 3] [Genisys]
 main: MultiWorld\MultiWorld
 description: Ported MultiWorld to pocketmine.
